# aiogram_template

./: .dockerignore  .env.dist  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  bot.py  docker-compose.yml  docker-entrypoint.sh  env.example  gen_ssl  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  cicd.yml
app/: __main__.py  config.py  loader.py
app/filters/: __init__.py  is_admin.py
app/handlers/: __init__.py
app/handlers/error/: __init__.py  (+1 more)
app/middlewares/: __init__.py  acl.py  chat_type.py  clocks.py  database.py  environment.py  sentry.py  throttling.py
app/misc/: __init__.py  api.py  bot_commands.py  regex.py  sync.py  utils.py
app/models/: base.py  user.py
app/services/: __init__.py  broadcaster.py  db_ctx.py  db_engine.py  repos.py
app/states/: base.py
app/utils/: __init__.py  bot_commands.py  db_commands.py  logger.py  notify_admins.py
config/: dist.config.yml
deploy/: Dockerfile  infra.docker-compose.yml  nats-server.conf
migrations/: env.py
migrations/versions/: 93503cb17c05_init.py  a93fd5540200_init.py  d2245d4be86e_init.py
scripts/: docker-entrypoint.sh
src/common/: __init__.py  paths.py
src/infrastructure/: config_loader.py
src/tgbot/: __main__.py  config.py  factory.py  state.py
tgbot/: config.py
tgbot/filters/: __init__.py  is_admin.py
tgbot/handlers/: __init__.py
tgbot/middlewares/: __init__.py  acl.py  chat_type.py  database.py  throttling.py
tgbot/misc/: bot_commands.py  utils.py
tgbot/models/: base.py  user.py
tgbot/services/: __init__.py  db_ctx.py  db_engine.py
(+68 files in other folders)
