[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = "Telegram Bot Template written in aiogram"
authors = ["corruptmane <corruptmane@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
tgbot = "src.tgbot.__main__:run"
nats_migrations = "src.infrastructure.nats.__main__:run"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
aiogram-dialog = "^2.0.0"
uvloop = "^0.19.0"
alembic = "^1.12.1"
orjson = "^3.9.10"
pyyaml = "^6.0.1"
redis = "^5.0.1"
uuid6 = "^2023.5.2"
structlog = "^23.2.0"
rich = "^13.6.0"
adaptix = "^3.0.0a7"
nats-py = "^2.6.0"
ormsgpack = "^1.4.0"
pathvalidate = "^3.2.0"
sqlalchemy = {version = "^2.0.23", extras = ["postgresql_asyncpg"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
